# Protocol-Comparison

./: Cargo.toml  build.rs  docker-compose.mqtt.yml  docker-compose.quic.yml  docker-compose.redis.yml  docker-compose.tcp.yml  docker-compose.yml  quic.html  redis.html
certs/: ca.crt  server.key
docker/: Dockerfile
mosquitto/: mosquitto.conf
report/: generate.py
results/: mqtt.html  results_mqtt_latency.json  results_mqtt_throughput.json  results_quic_latency.json  results_quic_throughput.json  results_redis_latency.json  results_redis_throughput.json  results_tcp_latency.json  results_tcp_throughput.json  tcp.html  total.html
scripts/: gen_certs.sh
src/: cli.rs  framing.rs  main.rs  metrics.rs  payload.rs
src/proto/: messages.proto
src/scenarios/: mod.rs  mqtt.rs  quic.rs  redis.rs  tcp.rs
