[package]
name = "pico-launcher"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
base64 = "0.22.1"
bincode = "1.3.3"
bytes = "1.11.1"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.0", features = ["derive"] }
futures-util = "0.3.32"
prost = "0.14.3"
quinn = "0.11.9"
rcgen = "0.14.7"
redis = { version = "1.0.5", features = ["tokio-comp"] }
rumqttc = "0.25.1"
rustls = { version = "0.23.37", default-features = false, features = ["ring", "std"] }
rustls-pemfile = "2.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }

[build-dependencies]
prost-build = "0.14.3"
protoc-bin-vendored = "3.2.0"
